# GoogleTests

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  MyString.cpp  MyString.h
tests/: CMakeLists.txt
tests/some_tests/: CMakeLists.txt  StringFixture.cpp  basic_test.cpp
